src/App.css
a {
  color: aliceblue;
  text-decoration: none;
  justify-content: center;
}

body {
  background-color: rgb(69, 78, 78);
}


.App {
  text-align: center;

}

.company-container {
  margin: 0 auto;
}

.companyDataDisplay1, .companyDataDisplay2 {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
}

.detailCompanyDisplay {
  border: solid  aliceblue;
  color: aliceblue;
  width: 25rem;
  height: 28rem;
  font-size: 3vh;
  background-color: slategray;
  padding: 3vh;
  margin: 0 auto;
  margin-top: 3vh;
  margin-bottom: 3vh;
}

.testCompanyDisplay {
  border: solid  aliceblue;
  width: 20rem;
  height: 17rem;
  font-size: 3vh;
  font-size: 30px;
}

.header {
  background-color:rgb(57, 68, 92, .7);
  opacity: .9;
  color: aliceblue;
  margin: 3fr;
  padding:5px;
  height: 15rem;
}

.header {
  display: flex;
  flex-direction: column;
  font-size: 1rem;
  top: 0;
  background-image: url('https://images.unsplash.com/photo-1518983682921-e8a9e4177988?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1050&q=80');
  background-size: cover;
  background-position:center;
}


.footer {
  position: relative;
  bottom: 0;
  background-color:rgb(57, 68, 92);
  color: aliceblue;
  margin: 3fr;
  padding:5px;
  height: 15rem;
}

.footer-container {
  margin: 0 auto;
}

.home {
  background-color:slategrey;
  color:aliceblue;
  height: 120vh;
  margin: 1rem;
  width: 98%;
  border: solid;
}

.mainTitle{
  font-size: 3rem;
}

.nav-container {
  background-color: linen;
  color: slategray;
  display: inline;
}

.professional-links {
  display: flex;
  flex-direction: row;
  width: 40vh;
  padding: 3vh;
  position: relative;
  left: 37%;
}

.search {
  width: 30rem;
  height: 3rem;
  position: relative;
  bottom: 25px;
  padding: 5px;
  margin: 10px;
}

.search-button {
  background-color: aliceblue;
  color:slategray;
  border: solid rgb(57, 68, 92);
  font-size: 20px;
}

.search-input {
  color: slategray;
  background-color: aliceblue;
  border: solid rgb(57, 68, 92);
  font-size: 20px;
}

.stockContainer {
  padding: 2vh;
}

